force-app/main/default/objects/Pricebook2/fields/Create_New_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Create_New_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When an Order is Activated using this Price Book, should an Opportunity be created Automatically or not?</description>
    <label>Create New Opportunity?</label>
    <type>Checkbox</type>
</CustomField>