force-app/main/default/objects/Pricebook2/fields/Disallow_Direct_Orders__c.field-meta.xml
<CustomField>
    <fullName>Disallow_Direct_Orders__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field indicates whether Order should *NOT* be allowed to be created using this price list. Opportunity Process should be used instead so that SSIP Rules can be added.</description>
    <inlineHelpText>Set this field to true if no Order should be created using this price book.</inlineHelpText>
    <label>Disallow Direct Orders</label>
    <type>Checkbox</type>
</CustomField>