force-app/main/default/objects/Pricebook2/fields/Future_Order_Gap__c.field-meta.xml
<CustomField>
    <fullName>Future_Order_Gap__c</fullName>
    <description>The number of days after which Future Order should be scheduled.</description>
    <inlineHelpText>The number of days after which Future Order should be scheduled.</inlineHelpText>
    <label>Future Order Gap</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>