force-app/main/default/objects/Pricebook2/fields/Future_Order_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Future_Order_Price_Book__c</fullName>
    <description>The name of the Price Book to be used for Future Order and to create SSIP Rules</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the Price Book to be used for Future Order and to create SSIP Rules</inlineHelpText>
    <label>Future Order Price Book</label>
    <length>80</length>
    <type>Text</type>
</CustomField>