force-app/main/default/objects/Pricebook2/fields/IsSubscription__c.field-meta.xml
<CustomField>
    <fullName>IsSubscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscription?</label>
    <type>Checkbox</type>
</CustomField>