force-app/main/default/objects/Pricebook2/fields/New_Opportunity_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>New_Opportunity_Price_Book__c</fullName>
    <description>Name of the Price Book that should be used only if a new Opportunity needs to be created.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>New Opportunity Price Book</label>
    <length>80</length>
    <type>Text</type>
</CustomField>