force-app/main/default/objects/Pricebook2/fields/Price_List_Target__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Target__c</fullName>
    <label>Price List Target</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALL</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Payor</fullName>
            </value>
            <value>
                <fullName>Medical_Facility</fullName>
            </value>
            <value>
                <fullName>Prescriber</fullName>
            </value>
            <value>
                <fullName>ECOM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>