force-app/main/default/objects/Pricebook2/fields/Subscription_Period_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Period_in_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Subscription Period in Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>