force-app/main/default/objects/Pricebook2/listViews/AT_Pricebooks.listView-meta.xml
<ListView>
    <fullName>AT_Pricebooks</fullName>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>PRICEBOOK2.DESCRIPTION</columns>
    <columns>PRICEBOOK2.LAST_UPDATE</columns>
    <columns>PRICEBOOK2.IS_ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRICEBOOK2.NAME</field>
        <operation>startsWith</operation>
        <value>AT</value>
    </filters>
    <label>AT Pricebooks</label>
    <language>en_US</language>
    <sharedTo>
        <group>AT_Inside_Sales</group>
    </sharedTo>
</ListView>