force-app/main/default/objects/Pricebook2/listViews/CA_Pricebooks.listView-meta.xml
<ListView>
    <fullName>CA_Pricebooks</fullName>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>PRICEBOOK2.DESCRIPTION</columns>
    <columns>PRICEBOOK2.LAST_UPDATE</columns>
    <columns>PRICEBOOK2.IS_ACTIVE</columns>
    <columns>IsSubscription__c</columns>
    <columns>Disallow_Direct_Orders__c</columns>
    <columns>PRICEBOOK2.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRICEBOOK2.NAME</field>
        <operation>startsWith</operation>
        <value>CAN</value>
    </filters>
    <label>CA Pricebooks</label>
    <sharedTo>
        <group>CA_Inside_Sales</group>
    </sharedTo>
</ListView>