force-app/main/default/objects/Pricebook2/listViews/CH_Pricebooks.listView-meta.xml
<ListView>
    <fullName>CH_Pricebooks</fullName>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>PRICEBOOK2.DESCRIPTION</columns>
    <columns>PRICEBOOK2.LAST_UPDATE</columns>
    <columns>PRICEBOOK2.IS_ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRICEBOOK2.NAME</field>
        <operation>startsWith</operation>
        <value>CH</value>
    </filters>
    <label>CH Pricebooks</label>
    <language>en_US</language>
    <sharedTo>
        <group>CH_Inside_Sales</group>
    </sharedTo>
</ListView>