force-app/main/default/objects/Pricebook2/listViews/DE_Pricebooks.listView-meta.xml
<ListView>
    <fullName>DE_Pricebooks</fullName>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>PRICEBOOK2.DESCRIPTION</columns>
    <columns>PRICEBOOK2.LAST_UPDATE</columns>
    <columns>PRICEBOOK2.IS_ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRICEBOOK2.NAME</field>
        <operation>startsWith</operation>
        <value>DE</value>
    </filters>
    <label>DE Pricebooks</label>
    <language>en_US</language>
    <sharedTo>
        <group>DE_Admin</group>
        <group>DE_Billing</group>
        <group>DE_CSR</group>
        <group>DE_Field_Sales</group>
        <group>DE_Finance</group>
        <group>DE_HIS</group>
        <group>DE_Inside_Sales</group>
        <group>EU_Tech_Support</group>
    </sharedTo>
</ListView>