force-app/main/default/objects/Pricebook2/listViews/DIST_Pricebooks.listView-meta.xml
<ListView>
    <fullName>DIST_Pricebooks</fullName>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>PRICEBOOK2.DESCRIPTION</columns>
    <columns>PRICEBOOK2.LAST_UPDATE</columns>
    <columns>PRICEBOOK2.IS_ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRICEBOOK2.DESCRIPTION</field>
        <operation>startsWith</operation>
        <value>DIST-</value>
    </filters>
    <label>DIST Pricebooks</label>
    <language>en_US</language>
    <sharedTo>
        <role>EMEA</role>
    </sharedTo>
</ListView>