force-app/main/default/objects/Pricebook2/listViews/UK_Pricebooks.listView-meta.xml
<ListView>
    <fullName>UK_Pricebooks</fullName>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>PRICEBOOK2.DESCRIPTION</columns>
    <columns>PRICEBOOK2.LAST_UPDATE</columns>
    <columns>PRICEBOOK2.IS_ACTIVE</columns>
    <columns>IsSubscription__c</columns>
    <columns>Price_List_Target__c</columns>
    <columns>Create_New_Opportunity__c</columns>
    <columns>New_Opportunity_Price_Book__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRICEBOOK2.NAME</field>
        <operation>startsWith</operation>
        <value>UK</value>
    </filters>
    <label>UK Pricebooks</label>
    <language>en_US</language>
    <sharedTo>
        <group>GB_Inside_Sales</group>
        <group>IE_Inside_Sales</group>
    </sharedTo>
</ListView>